Fix possible clipping of switches in some titlebars

--- a/src/gtk-3.0/sass/_common.scss
+++ b/src/gtk-3.0/sass/_common.scss
@@ -2574,6 +2574,8 @@ switch {
 
   .titlebar & {
     background-color: theme-color.stroke(theme-color.$on-surface);
+    margin-left: 8px;
+    margin-right: 8px;
 
     &:checked {
       background-color: theme-color.stroke(theme-color.$on-surface);
